Add config files.

--- a/composer.json
+++ b/composer.json
@@ -77,11 +77,13 @@
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
+
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "post-install-cmd": [
+            "cp -R .heroku/ ./",
+            "vendor/bin/heroku-php-apache2 public/"
         ]
     },
     "conflict": {
