add user account manager, registration, login, ...

--- a/.env
+++ b/.env
@@ -17,6 +17,9 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=f0314e7ce1a0f6dcff90b48029732f6e
+APP_BASE_URL=https://127.0.0.1:8000/
+JWT_SECRET=f0314e7ce1a0f6dcff90b48029732f6s
+APP_MAIL_SENDER=StudioPrestige@admin.com
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
