--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,22 +5,29 @@ security:
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
-        app_user_provider:
+        app_admin_provider:
             entity:
                 class: App\Entity\Admin
                 property: username
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
  
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            lazy: true
-            provider: app_user_provider
+        admin:
+            pattern: ^/admin
+            security: true
+            # lazy: true
+            provider: app_admin_provider
             custom_authenticator: App\Security\AppAdminAuthenticator
             logout:
                 path: admin_app_logout
-                target: app_login
+                target: app_admin_login
                 # where to redirect after logout
                 # target: app_any_route
 
@@ -29,6 +36,33 @@ security:
                 lifetime: 604800
                 path: /
                 always_remember_me: true
+        main:
+            # pattern: ^/
+            lazy: true
+            provider: app_user_provider
+            custom_authenticator: App\Security\AppUserAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
+
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800
+                path: /
+                always_remember_me: true
+            # custom_authenticator: App\Security\AppAdminAuthenticator
+            # logout:
+            #     path: admin_app_logout
+            #     target: app_login
+            #     # where to redirect after logout
+            #     # target: app_any_route
+
+            # remember_me:
+            #     secret: '%kernel.secret%'
+            #     lifetime: 604800
+            #     path: /
+            #     always_remember_me: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -42,7 +76,8 @@ security:
         - { path: ^/admin/login, roles: [] }
         - { path: ^/admin, roles: ROLE_ADMIN }
         
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/booking, roles: ROLE_USER }
+        - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
     security:
