--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "expose-loader": "^4.1.0",
+        "popper.js": "^1.16.1",
         "select2": "^4.1.0-rc.0"
     }
 }
